# asr-open-sc

./: .gitignore  AUTHORS.md  CITATION.cff  CONTRIBUTING_PROJECTS.md  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: publish-pypi.yml  python-ci.yml
src/asr/open_sc/: __init__.py  registry.py
src/asr/risk/tail/: __init__.py
tests/: test_namespace_imports.py  test_registry.py
